# buzzinga

./: .gitignore  BuzzerGame.py  Buzzinga Anleitung.docx  Buzzinga.py  HintGame.py  MultipleChoiceGame.py  README.md  WhoKnowsMoreGame.py  animation.py  audio_quiz.py  buzzinga_class.py  check_usb_input.py  game_utilities.py  hint_quiz.py  image_quiz.py  launcher.py  layout.py  main.py  main.spec  pyproject.toml  question_quiz.py  quiz_games.py  requirements.txt  setup.bat  setup.sh  static.py  translations.py  update_buzzinga.py  whoknowsmore_quiz.py  wifi_settings.py
data/hints/: Interpret.json  Schauspieler.json  Songtexte.json  Sportteams.json  Staatsangehörigkeiten.json
data/questions/: noxt!.json
data/who-knows-more/: 2025.json
src/buzzinga/: animation.py  audio_quiz.py  buzzinga_class.py  game_utilities.py  hint_quiz.py  image_quiz.py  question_quiz.py  quiz_games.py  static.py  translations.py  update_buzzinga.py  whoknowsmore_quiz.py
