[project]
name = "buzzinga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.3.0",
    "pybuzzers>=1.0.6",
    "pygame>=2.6.1",
    "pyinstaller>=6.16.0",
]

[project.scripts]
buzzinga = "buzzinga.buzzinga_class:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buzzinga"]
